# napari-omero-downloader-cci

./: README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: release.yml  test_and_deploy.yml
scripts/: install_napari_omero.bat  install_napari_omero.sh
src/napari_omero_downloader_cci/: _installer.py  gui.py  napari.yaml  omero_connection.py  omero_downloader_widget.py
src/napari_omero_downloader_cci/_tests/: test_tree_population.py  test_widget.py
