[project]
name = "napari-omero-downloader-cci"
dynamic = ["version"]
description = "A plugin that allows napari to connect to the Omero CCI server to visualize and download image data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Simon Leclerc"},
  {email = "simon.leclerc@gu.se"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8,<3.13"

dependencies = [
    "numpy",
    "qtpy",
	"dask >= 2025.9.0",
    "zeroc-ice==3.6.5",
    "omero-py==5.21.2",
]

[project.optional-dependencies]
all = ["napari[all]"]

testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari[qt]",  # test with napari's default Qt bindings
]
dev = [
    "napari-omero-downloader-cci[testing]",
    "black",
    "ruff",
]

[project.entry-points."napari.manifest"]
napari-omero-downloader-cci = "napari_omero_downloader_cci:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/CCI-GU-Sweden/napari-omero-downloader-cci/issues"
"Documentation" = "https://github.com/CCI-GU-Sweden/napari-omero-downloader-cci#README.md"
"Source Code" = "https://github.com/CCI-GU-Sweden/napari-omero-downloader-cci"
"User Support" = "https://github.com/CCI-GU-Sweden/napari-omero-downloader-cci/issues"

[build-system]
requires = ["setuptools>=42.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_omero_downloader_cci/_version.py"
fallback_version = "0.0.1+nogit"

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]
fix = true
